syntax = "proto3";

package user;

option go_package = "./proto;user";

service User {
	rpc Register(RegReq) returns (Response){};
	rpc AuthUpdate(AuthReq)returns(AuthResp){}
}

message RegReq{
	string	mobile = 1;
	string password = 2;
}

message Request {
	string phone = 1;
	string imageCode = 2;
	string uuid = 3;
}

message Response {
	string errno = 1;
	string errmsg = 2;
}

message AuthReq{
	string id_card = 1;
	string real_name = 2;
	string userName = 3;
}

message AuthResp{
	string errno = 1;
	string errmsg = 2;
}

